--- a/.gitignore
+++ b/.gitignore
@@ -133,3 +133,9 @@ gcloud.json
 # sitemaps
 # apps/www/public/*.xml
 # apps/docs/public/*.xml
+
+# added from local-ai 
+volumes/
+shared/
+supabase/
+
